welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: ';' expected but ',' found.
	leveBrosse(),setCouleurBrosse(Color.YELLOW);avance();baisseBrosse();leveBrosse();droite();avance();avance()
                    ^FlowerPot:10: error: Unmatched closing brace '}' ignored here
}
^FlowerPot:13: error: eof expected but '}' found.
}
^